<resources>
    <string name="app_name">Hololive</string>
    <string name="Nama">ANANTA DWI PRAYOGA ALWY</string>
    <string name="email">ananta.alwy01@gmail.com</string>
    <string name="member_name">Nama Talents</string>
    <string name="quote">"How's it going, Soratomos! It is Tokino Sora!"</string>
    <string name="debut">solo debutant</string>
    <string name="official_website_en">Official Website(EN)</string>
    <string name="official_website_jp">Official Website(JP)</string>
    <string name="more_detail">More Detail</string>
    <string name="debute_date">Debute date:</string>
    <string name="debute">September 7, 2017</string>
    <string name="birthday">Birthday:</string>
    <string name="_15_may_2000">15 May 2000</string>
    <string name="illustrator">Illustrator:</string>
    <string name="affiliation">Affiliation</string>
    <string name="height">Height</string>
    <string name="nickname_s">Nickname(s):</string>
</resources>