<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:backgroundTint="#FFFFFFFF"
    android:layout_marginTop="16dp"
    android:layout_marginBottom="16dp"
    android:id="@+id/mainlayout">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/item_layout"
        android:layout_width="358dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:cardElevation="0dp"
        app:cardCornerRadius="23dp"
        app:strokeColor="@color/border"
        app:strokeWidth="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_item_photo"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_marginBottom="8dp"
                android:layout_gravity="center"
                app:civ_border_color="@color/border_color"
                app:civ_border_width="3dp"
                tools:src="@tools:sample/avatars"/>

            <TextView
                android:id="@+id/tv_item_talentname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/primaryText_color"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="@string/member_name" />

            <TextView
                android:id="@+id/tv_item_gen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:textSize="12sp"
                android:textAlignment="center"
                tools:text="@string/debut"/>

            <TextView
                android:id="@+id/tv_item_quotes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textStyle="italic"
                android:textAlignment="center"
                android:ellipsize="end"
                android:maxLines="2"
                tools:text="@string/quote" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>
</LinearLayout>